fix color contrast

--- a/theme.css
+++ b/theme.css
@@ -1,9 +1,9 @@
 :root {
   /*theme colors, only need to change here*/
   --background-color: #070c1d;
-  --background-color-gradient: #000000;
-  --box-color: rgba(100, 100, 255, 0.08);
-  --box-hover-color: rgba(100, 100, 255, 0.1);
+  --background-color-gradient: #000011;
+  --box-color: rgba(200, 200, 255, 0.08);
+  --box-hover-color: rgba(200, 200, 255, 0.1);
   --button-hover-color: #0050ea;
   --shadow-color: #000000;
   --text-color: #FFFFFF;
@@ -24,6 +24,9 @@
 
   /*misc*/
   --pdf-height: 0px;
+
+  background-image: linear-gradient(var(--background-color), var(--background-color-gradient));
+  background-attachment: fixed;
 }
 
 @keyframes show {
@@ -32,8 +35,6 @@
 }
 
 body {
-  background-image: linear-gradient(var(--background-color), var(--background-color-gradient));
-  background-attachment: fixed;
   font-family: Arial, sans-serif;
   color: var(--text-color);
   text-align: center;
